fix database name

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-TRACKER_DB_URI = mongodb+srv://VinceLi:20030601v@lol-tracker.qthlq.mongodb.net/lol_tracker_summoners?retryWrites=true&w=majority
-TRACKER_NS=lol_tracker_summoners
+TRACKER_DB_URI = mongodb+srv://VinceLi:20030601v@lol-tracker.qthlq.mongodb.net/lol_tracker?retryWrites=true&w=majority
+TRACKER_NS=lol_tracker
 PORT = 5000
